--- a/.gitignore
+++ b/.gitignore
@@ -4,19 +4,12 @@
 !app/cache/.gitkeep
 !app/logs/.gitkeep
 
-# Cache and logs (Symfony3)
-/var/cache/*
-/var/logs/*
-!var/cache/.gitkeep
-!var/logs/.gitkeep
-
 # Parameters
 /app/config/parameters.yml
 /app/config/parameters.ini
 
 # Managed by Composer
 /app/bootstrap.php.cache
-/var/bootstrap.php.cache
 /bin/*
 !bin/console
 !bin/symfony_requirements
@@ -26,12 +19,8 @@
 /web/bundles/
 /web/uploads/
 
-# PHPUnit
-/app/phpunit.xml
-/phpunit.xml
-
-# Build data
-/build/
-
 # Composer PHAR
 /composer.phar
+
+# PhpStorm project settings
+/.idea/*
