a little cleanup and added stub for dashboard bundle

--- a/src/Silnin/SilninBsgDashboardBundle/Resources/config/services.yml
+++ b/src/Silnin/SilninBsgDashboardBundle/Resources/config/services.yml
@@ -1,6 +1,9 @@
 parameters:
-  silninbsgdashboard.controller.class:              Silnin\SilninBsgDashboard\Controller\DashboardController
+    dashboard.service.class:             Silnin\SilninBsgDashboardBundle\Service\DashboardService
 
 services:
-  dashboard.controller:
-    class:            "%silninbsgdashboard.controller.class%"
+
+    dashboard.service:
+        class:            "%dashboard.service.class%"
+        arguments:
+            - @security.context
