--- a/src/Silnin/BsgSheet/DashboardBundle/Resources/config/services.yml
+++ b/src/Silnin/BsgSheet/DashboardBundle/Resources/config/services.yml
@@ -1,5 +1,5 @@
 parameters:
-    dashboard.service.class:             Silnin\SilninBsgDashboardBundle\Service\DashboardService
+    dashboard.service.class:             Silnin\BsgSheet\DashboardBundle\Service\DashboardService
 
 services:
 
