introduced the most basic ACL for the Character entity

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -8,3 +8,7 @@ fos_user:
 dashboard:
     resource: "@DashboardBundle/Controller/"
     type: annotation
+
+character:
+    resource: "@CharacterBundle/Controller/"
+    type: annotation
