--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -6,6 +6,9 @@ security:
         Symfony\Component\Security\Core\User\User: plaintext
         FOS\UserBundle\Model\UserInterface: sha512
 
+    acl:
+        connection: default
+
     # http://symfony.com/doc/current/book/security.html#hierarchical-roles
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
