--- a/src/Silnin/BsgSheet/DashboardBundle/Resources/config/services.yml
+++ b/src/Silnin/BsgSheet/DashboardBundle/Resources/config/services.yml
@@ -7,3 +7,4 @@ services:
         class:            "%dashboard.service.class%"
         arguments:
             - @security.context
+            - @character.service
