--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -68,3 +68,4 @@ security:
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
         - { path: ^/dashboard, role: ROLE_USER }
+        - { path: ^/character, role: ROLE_USER }
