added FrontpageBundle and enabled apache rewrite rules

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -12,3 +12,7 @@ dashboard:
 character:
     resource: "@CharacterBundle/Controller/"
     type: annotation
+
+frontpage:
+    resource: "@FrontpageBundle/Controller/"
+    type: annotation
