--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -69,5 +69,6 @@ security:
         - { path: ^/admin/, role: ROLE_ADMIN }
         - { path: ^/dashboard, role: ROLE_USER }
         - { path: ^/character, role: ROLE_USER }
+#        - { path: ^/editor, role: ROLE_USER }
 
         - { path: ^/, role: IS_AUTHENTICATED_ANONYMOUSLY }
